now deploys to helion stackato and looks like a java starter app
fixed manifest (was syntax and spacing errors)
added missing images

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,7 @@
 	                                <p class="lead">You've deployed your first Java app. <b>TODO: Java-ize this</b>. As you are building the app, you can keep the header around as a handy reminder on how to add app services.  </p>
 	                            </div>
 	                        </div>
-	                        <div class="span6 logo" style="margin-top:60px"><img src="/img/python.jpeg"></div>
+	                        <div class="span6 logo" style="margin-top:60px"><img src="/img/javalogo.png"></div>
 	                    </div>
 	                </div>
 	            </div>
@@ -95,13 +95,14 @@
 	        </div>
 	
 	        <div class="span4">
-	        	<img src="/img/Scaffolding.png" style="display:block; margin-left: auto; margin-right: auto;">
+	        	<img src="/img/jersey.png" style="display:block; margin-left: auto; margin-right: auto;">
 	        	
 	            <h2>Web Framework</h2>
 	            <p>
-	              This solution is built using the Python Bottle framework.  This micro web framework gives you routing, templates, and a built-in web server.
+	              This solution is built using the Java Jersey framework.  The Jersey RESTful Web Services framework is an open source, production quality 
+	              framework for developing RESTful Web Services implemented as Servlets in Java.
 	            </p>
-	            <a href="http://bottlepy.org">Read More →</a>
+	            <a href="https://jersey.java.net/">Read More →</a>
 	
 	        </div>
 	
