small text and graphic tweaks

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,10 +76,10 @@
 	                        <div class="span6">
 	                            <div class="carousel-caption">
 	                                <h1>Congratulations!</h1>
-	                                <p class="lead">You've deployed your first Java app. <b>TODO: Java-ize this</b>. As you are building the app, you can keep the header around as a handy reminder on how to add app services.  </p>
+	                                <p class="lead">You've deployed your first Java app.As you are building the app, you can keep the header around as a handy reminder on how to add app services.  </p>
 	                            </div>
 	                        </div>
-	                        <div class="span6 logo" style="margin-top:60px"><img src="/img/javalogo.png"></div>
+	                        <div class="span6 logo" style="margin-top:60px;width:50%"><img src="/img/javalogo.png"></div>
 	                    </div>
 	                </div>
 	            </div>
@@ -95,7 +95,7 @@
 	        </div>
 	
 	        <div class="span4">
-	        	<img src="/img/jersey.png" style="display:block; margin-left: auto; margin-right: auto;">
+	        	<img src="/img/jersey.png" style="display:block; margin-left: auto; margin-right: auto;width:50%">
 	        	
 	            <h2>Web Framework</h2>
 	            <p>
@@ -118,9 +118,9 @@
 
 	        <div class="span4">
 	            <img src="/img/procfile.png" style="height:94px;width:auto">
-	            <h2>Procfile</h2>
+	            <h2>Pom.xml</h2>
 	            <p>
-	                This file specifies the starting commands for your app.  In this case we are telling the web server that wsgi.py is the entry point.
+	                Helion Stackato will use this file to provision all required dependencies.  The one included in this starter app lists all packages needed for Jersey.
 	            </p>
 	            <a href="#">Read More →</a>
 	        </div>
