--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,7 @@
 	                                <p class="lead">You've deployed your first Java app.As you are building the app, you can keep the header around as a handy reminder on how to add app services.  </p>
 	                            </div>
 	                        </div>
-	                        <div class="span6 logo" style="margin-top:60px;width:50%"><img src="/img/javalogo.png"></div>
+	                        <div class="span6 logo" style="margin-top:60px;"><img src="/img/javalogo.png" style="width:50%"></div>
 	                    </div>
 	                </div>
 	            </div>
